--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "express": "3.4.8",
     "express-handlebars": "^3.0.0",
     "lru-cache": "^4.1.1",
-    "xero-node": "^2.2.2"
+    "xero-node": "^2.*.*"
   },
   "engines": {
     "node": ">=6.0.0"
