--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "3.4.8",
     "express-handlebars": "^3.0.0",
+    "express-session": "^1.15.5",
     "xero-node": "2.*.*"
   },
   "engines": {
