--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "express": "3.4.8",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.5",
-    "xero-node": "2.*.*"
+    "xero-node": "2.5.3"
   },
   "engines": {
     "node": ">=6.0.0"
