--- a/config/example_config.json
+++ b/config/example_config.json
@@ -1,13 +1,13 @@
 {
     "APPTYPE": "PARTNER",
     "partner": {
-        "authorizeCallbackUrl": "https://example.com/xerocallback",
+        "authorizeCallbackUrl": "http://localhost:3100/access",
         "consumerKey": "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX",
         "privateKeyPath": "/some/path/to/privatekey.pem",
         "userAgent": "Tester (PARTNER) - Application for testing Xero"
     },
     "public": {
-        "authorizeCallbackUrl": "https://example.com/xerocallback",
+        "authorizeCallbackUrl": "http://localhost:3100/access",
         "consumerKey": "AAAAAAAAAAAAAAAAAA",
         "consumerSecret": "BBBBBBBBBBBBBBBBBBBB",
         "userAgent": "Tester (PUBLIC) - Application for testing Xero"
