--- a/config/example_config.json
+++ b/config/example_config.json
@@ -4,12 +4,14 @@
         "authorizeCallbackUrl": "http://localhost:3100/access",
         "consumerKey": "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX",
         "privateKeyPath": "/some/path/to/privatekey.pem",
-        "userAgent": "Tester (PARTNER) - Application for testing Xero"
+        "userAgent": "Tester (PARTNER) - Application for testing Xero",
+        "redirectOnError": true
     },
     "public": {
         "authorizeCallbackUrl": "http://localhost:3100/access",
         "consumerKey": "AAAAAAAAAAAAAAAAAA",
         "consumerSecret": "BBBBBBBBBBBBBBBBBBBB",
-        "userAgent": "Tester (PUBLIC) - Application for testing Xero"
+        "userAgent": "Tester (PUBLIC) - Application for testing Xero",
+        "redirectOnError": true
     }
 }
