--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "express": "3.4.8",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.5",
-    "xero-node": "2.16.0"
+    "xero-node": "^3.0.0-alpha.10"
   },
   "engines": {
     "node": ">=6.0.0"
